# sc-tumor-annotator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  english-only.yml
data/: .gitignore  manifest.yaml
docs/: architecture.md  roadmap-v0.3.md  what-is-out-of-scope.md
docs/release-notes/: v0.1.md  v0.2.md
notebooks/: demo.ipynb
scripts/: check_english_only.py  run_lab.sh
src/sctumor/: __init__.py  ablation.py  adapter.py  annotate.py  audit.py  canary.py  cnv.py  evaluate.py  pipeline.py  synth.py  tracking.py
tests/: test_ablation.py  test_annotate.py  test_canary.py  test_cnv.py  test_pipeline.py  test_synth.py
tests/fixtures/: canary.json
